--- a/src/modules/myOrders/myorders.scss
+++ b/src/modules/myOrders/myorders.scss
@@ -203,6 +203,11 @@ p {
                                         outline: none;
                                     }
                                 }
+                                input::-webkit-outer-spin-button,
+                                input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                }
                                 ::placeholder {
                                     color: #ffffff;
                                     font-size: 14px;
